# EASY-EAI-Toolkit-C-Solution

./: .gitignore  README.md  README_CN.md  README_EN.md  build_all_solu.sh
easyeai-api/algorithm_api/qrdecode/: qrdecode.h
easyeai-api/media_api/endeCode_api/: endeCode_api.h
solu-EAI-box/: CMakeLists.txt  build.sh
solu-EAI-box/config/: rtspClient.ini
solu-EAI-box/include/: config.h  system.h
solu-EAI-box/src/: main.cpp
solu-EAI-box/src/adapter/: adapter.cpp  adapter.h
solu-EAI-box/src/analyzer/: analyzer.cpp  analyzer.h
solu-EAI-box/src/capturer/: rtspCapturer.h
solu-devInfo/: CMakeLists.txt  build.sh
solu-devInfo/src/: main.cpp
solu-devInfo/src/info/: info.cpp  info.h
solu-dms/: CMakeLists.txt  build.sh
solu-dms/src/: facialMovement.cpp  facialMovement.h  main.cpp
solu-faceDetect/: CMakeLists.txt  build.sh
solu-faceDetect/src/: main.cpp
solu-faceRecognition/: CMakeLists.txt
solu-faceRecognition/src/: main.cpp
solu-faceRecognition/src/dataBase/: dataBase.cpp  dataBase.h
solu-faceRecognition/src/keyEvent/: keyEvent.cpp  keyEvent.h
solu-helmetDetect/: CMakeLists.txt
solu-helmetDetect/src/: main.cpp
solu-personDetect/: CMakeLists.txt
solu-personDetect/src/: main.cpp
solu-qrdecode/: CMakeLists.txt  build.sh
solu-qrdecode/src/: main.cpp
solu-rtspIPCamera/: CMakeLists.txt
solu-rtspIPCamera/include/: config.h
solu-rtspIPCamera/src/: main.cpp
solu-rtspIPCamera/src/enCoder/: enCoder.cpp  enCoder.h
solu-rtspIPCamera/src/rtspServer/: rtspServer.cpp  rtspServer.h
solu-rtspMulitPlayer/: CMakeLists.txt  build.sh
solu-rtspMulitPlayer/config/: rtspClient.ini
solu-rtspMulitPlayer/include/: ipcData.h  system.h
solu-rtspMulitPlayer/src/: main.cpp  player.cpp  player.h  rtspCapturer.cpp  rtspCapturer.h
solu-rtspMulitPlayer/src/capturer/: rtspCapturer.cpp
solu-rtspMulitPlayer/src/player/: player.cpp  player.h  wavInfo_opt.c  wavInfo_opt.h
solu-selfLearning/: CMakeLists.txt  build.sh
solu-selfLearning/src/: main.cpp
solu-selfLearning/src/keyEvent/: keyEvent.cpp  keyEvent.h
solu-videoRecoder/: CMakeLists.txt
solu-videoRecoder/src/: main.cpp
